dom/base/test/jsmodules/importmaps/good/module_4.mjs
success("good/module_4.mjs");
