dom/base/test/jsmodules/importmaps/bad/module_4.mjs
throw "Shouldn't load file bad/module_4.mjs";
